--- a/.github/workflows/A.yml
+++ b/.github/workflows/A.yml
@@ -64,14 +64,11 @@ jobs:
 
     - name: Display Inputs
       run: |
-        printf "::group::User Environment Variables
-"
-        printf "Include Recovery Installer: %s
-" "${{ inputs.RECOVERY_INSTALLER }}"
-        printf "Release recovery.tar: %s
-" "${{ inputs.RECOVERY_TAR }}"
-        printf "::endgroup::
-"
+        printf "::group::User Environment Variables"
+        printf "Include Recovery Installer: %s" "${{ inputs.RECOVERY_INSTALLER }}"
+        printf "Release recovery.tar: %s" 
+        "${{ inputs.RECOVERY_TAR }}"
+        printf "::endgroup::"
 
     - name: Clean-up
       uses: rokibhasansagar/slimhub_actions@main
@@ -110,13 +107,11 @@ jobs:
         cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}
         git clone ${{ inputs.DEVICE_TREE }} -b ${{ inputs.DEVICE_TREE_BRANCH }} ${{ inputs.DEVICE_PATH }}
         cd ${{ inputs.DEVICE_PATH }}
-        printf "DEVICE_TREE_COMMIT=%s
-" "$(git rev-parse HEAD)" >> $GITHUB_ENV
+        printf "DEVICE_TREE_COMMIT=%s" "$(git rev-parse HEAD)" >> $GITHUB_ENV
 
     - name: 🔥 INJECT ALL 28 FLAGS (NO ECHO)
       run: |
-        printf "::group::🔥 Injecting ALL 28 OrangeFox Flags
-"
+        printf "::group::🔥 Injecting ALL 28 OrangeFox Flags"
         cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}
         
         read -r -a ALL_FLAGS <<< '(
@@ -154,31 +149,23 @@ jobs:
         : > flags.sh
         
         for flag in "${ALL_FLAGS[@]}"; do
-          printf "export %s
-" "$flag" >> flags.sh
-          printf "%s
-" "$flag" >> BoardConfig.mk
+          printf "export %s" "$flag" >> flags.sh
+          printf "%s" "$flag" >> BoardConfig.mk
         done
         
-        printf "✅ %d FLAGS injected!
-" "${#ALL_FLAGS[@]}"
-        printf "🎯 Features: GSI+AVB+Treble+Samsung+Non-Vanilla
-"
-        printf "::endgroup::
-"
+        printf "✅ %d FLAGS injected!" "${#ALL_FLAGS[@]}"
+        printf "🎯 Features: GSI+AVB+Treble+Samsung+Non-Vanilla"
+        printf "::endgroup::"
 
     - name: Determine Build Command
       id: build-cmd
       run: |
         if [[ "${{ inputs.MANIFEST_BRANCH }}" == "11.0" || "${{ inputs.MANIFEST_BRANCH }}" == "12.1" ]]; then
-          printf "command=lunch twrp_${{ inputs.DEVICE_NAME }}-eng && make clean && mka adbd ${{ inputs.BUILD_TARGET }}image
-" >> $GITHUB_OUTPUT
+          printf "command=lunch twrp_${{ inputs.DEVICE_NAME }}-eng && make clean && mka adbd ${{ inputs.BUILD_TARGET }}image" >> $GITHUB_OUTPUT
         else
-          printf "command=lunch omni_${{ inputs.DEVICE_NAME }}-eng && make clean && mka ${{ inputs.BUILD_TARGET }}image
-" >> $GITHUB_OUTPUT
+          printf "command=lunch omni_${{ inputs.DEVICE_NAME }}-eng && make clean && mka ${{ inputs.BUILD_TARGET }}image" >> $GITHUB_OUTPUT
         fi
-        printf "BUILD_DATE=%s
-" "$(date +%Y%m%d-%H%M)" >> $GITHUB_ENV
+        printf "BUILD_DATE=%s" "$(date +%Y%m%d-%H%M)" >> $GITHUB_ENV
 
     - name: Build OrangeFox with ALL Flags
       run: |
@@ -186,12 +173,9 @@ jobs:
         export ALLOW_MISSING_DEPENDENCIES=true
         source ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/flags.sh
         source build/envsetup.sh
-        printf "::group::Lunch Combos (FULL FLAGS)
-"
-        lunch | grep -i ${{ inputs.DEVICE_NAME }} || printf "No exact match found
-"
-        printf "::endgroup::
-"
+        printf "::group::Lunch Combos (FULL FLAGS)"
+        lunch | grep -i ${{ inputs.DEVICE_NAME }} || printf "No exact match found"
+        printf "::endgroup::"
         eval "${{ steps.build-cmd.outputs.command }}"
 
     - name: Find & Process Recovery Image
@@ -201,17 +185,12 @@ jobs:
         OUT_DIR="out/target/product/${{ inputs.DEVICE_NAME }}"
         ORANGEFOX_IMG=$(find "$OUT_DIR" -name "OrangeFox*.img" | head -1)
         if [[ -n "$ORANGEFOX_IMG" ]]; then
-          printf "CHECK_IMG_IS_OK=true
-" >> $GITHUB_ENV
-          printf "FILE_PATH=%s
-" "$(dirname "$ORANGEFOX_IMG")" >> $GITHUB_ENV
-          printf "ORANGEFOX_IMG=%s
-" "$(basename "$ORANGEFOX_IMG")" >> $GITHUB_ENV
-          printf "MD5_IMG=%s
-" "$(md5sum "$ORANGEFOX_IMG" | cut -d' ' -f1)" >> $GITHUB_ENV
+          printf "CHECK_IMG_IS_OK=true" >> $GITHUB_ENV
+          printf "FILE_PATH=%s" "$(dirname "$ORANGEFOX_IMG")" >> $GITHUB_ENV
+          printf "ORANGEFOX_IMG=%s" "$(basename "$ORANGEFOX_IMG")" >> $GITHUB_ENV
+          printf "MD5_IMG=%s" "$(md5sum "$ORANGEFOX_IMG" | cut -d' ' -f1)" >> $GITHUB_ENV
         else
-          printf "CHECK_IMG_IS_OK=false
-" >> $GITHUB_ENV
+          printf "CHECK_IMG_IS_OK=false" >> $GITHUB_ENV
           exit 1
         fi
 
@@ -220,12 +199,9 @@ jobs:
       run: |
         cd ${{ env.FILE_PATH }}
         case "${{ inputs.BUILD_TARGET }}" in
-          "boot") mv "${{ env.ORANGEFOX_IMG }}" boot.img; printf "RECOVERY_TYPE=boot
-" >> $GITHUB_ENV ;;
-          "recovery") mv "${{ env.ORANGEFOX_IMG }}" recovery.img; printf "RECOVERY_TYPE=recovery
-" >> $GITHUB_ENV ;;
-          "vendorboot") mv "${{ env.ORANGEFOX_IMG }}" vendor_boot.img; printf "RECOVERY_TYPE=vendor_boot
-" >> $GITHUB_ENV ;;
+          "boot") mv "${{ env.ORANGEFOX_IMG }}" boot.img; printf "RECOVERY_TYPE=boot" >> $GITHUB_ENV ;;
+          "recovery") mv "${{ env.ORANGEFOX_IMG }}" recovery.img; printf "RECOVERY_TYPE=recovery" >> $GITHUB_ENV ;;
+          "vendorboot") mv "${{ env.ORANGEFOX_IMG }}" vendor_boot.img; printf "RECOVERY_TYPE=vendor_boot" >> $GITHUB_ENV ;;
         esac
 
     - name: Add Recovery Installer
@@ -247,16 +223,12 @@ jobs:
       run: |
         cd ${{ env.FILE_PATH }}
         mapfile -t FILES < <(
-          printf '%s
-' "${{ env.RECOVERY_TYPE }}.img"
-          [[ "${{ inputs.RECOVERY_TAR }}" == "true" ]] && printf '%s
-' "${{ env.RECOVERY_TYPE }}.tar"
-          [[ "${{ inputs.RECOVERY_INSTALLER }}" == "true" ]] && printf '%s
-' "recovery-installer.zip"
+          printf '%s' "${{ env.RECOVERY_TYPE }}.img"
+          [[ "${{ inputs.RECOVERY_TAR }}" == "true" ]] && printf '%s' "${{ env.RECOVERY_TYPE }}.tar"
+          [[ "${{ inputs.RECOVERY_INSTALLER }}" == "true" ]] && printf '%s' "recovery-installer.zip"
           find . -name "OrangeFox*.zip" 2>/dev/null || true
         )
-        printf '%s
-' "${FILES[@]}" >> $GITHUB_OUTPUT
+        printf '%s' "${FILES[@]}" >> $GITHUB_OUTPUT
 
     - name: Create GitHub Release
       if: env.CHECK_IMG_IS_OK == 'true'
@@ -283,8 +255,7 @@ jobs:
     - name: Run LDCheck
       if: env.CHECK_IMG_IS_OK == 'true'
       run: |
-        printf "::group::🔍 LDCheck Analysis
-"
+        printf "::group::🔍 LDCheck Analysis"
         mkdir -p tools && cd tools
         wget -q https://github.com/orao/ldcheck/releases/download/v0.1/ldcheck-linux.zip || true
         unzip -qo ldcheck-linux.zip 2>/dev/null || true
@@ -292,8 +263,7 @@ jobs:
         mv -n ldcheck ${{ env.FILE_PATH }}/ 2>/dev/null || true
         cd ${{ env.FILE_PATH }}
         python3 ldcheck -p "system/lib64:vendor/lib64:system/lib:vendor/lib" -d ${{ inputs.LDCHECK }}
-        printf "::endgroup::
-"
+        printf "::endgroup::"
       continue-on-error: true
 
     - name: Cleanup Workspace
