--- a/.github/workflows/A.yml
+++ b/.github/workflows/A.yml
@@ -1,273 +1,6 @@
-name: OrangeFox [OFRP] - FULL FLAGS ✅ (NO ECHO)
-
-on:
-  workflow_dispatch:
-    inputs:
-      MANIFEST_BRANCH:
-        description: 'OrangeFox Branch'
-        required: true
-        default: '12.1'
-        type: choice
-        options: [12.1, 11.0]
-      DEVICE_TREE:
-        description: 'Custom Recovery Tree *REQUIRED*'
-        required: true
-      DEVICE_TREE_BRANCH:
-        description: 'Custom Recovery Tree Branch'
-        required: true
-        default: 'main'
-      DEVICE_PATH:
-        description: 'Specify your device path.'
-        required: true
-        default: 'device/tecno/KJ5'
-      DEVICE_NAME:
-        description: 'Specify your Device Codename.'
-        required: true
-        default: 'KJ5'
-      BUILD_TARGET:
-        description: 'Specify your Build Target'
-        required: true
-        default: 'vendorboot'
-        type: choice
-        options: [boot, recovery, vendorboot]
-      LDCHECK:
-        description: 'Path of blobs to check'
-        required: true
-        default: 'system/bin/qseecomd'
-      RECOVERY_TAR:
-        description: 'Release recovery.tar For Samsung devices'
-        required: false
-        default: false
-        type: boolean
-      RECOVERY_INSTALLER:
-        description: 'Include recovery installer zip'
-        type: boolean
-        required: true
-        default: true
-
-jobs:
-  build:
-    name: Build OFRP FULL FLAGS by ${{ github.actor }}
-    runs-on: ubuntu-latest
-    if: github.repository_owner == github.event.sender.login
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    permissions:
-      contents: write
-      id-token: write
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - name: Display Inputs
-      run: |
-        printf "::group::User Environment Variables"
-        printf "Include Recovery Installer: %s" "${{ inputs.RECOVERY_INSTALLER }}"
-        printf "Release recovery.tar: %s" 
-        "${{ inputs.RECOVERY_TAR }}"
-        printf "::endgroup::"
-
-    - name: Clean-up
-      uses: rokibhasansagar/slimhub_actions@main
-
-    - name: Setup Swap Space (24GB)
-      uses: rayluo/action-swap-space@v1
-      with:
-        swap_size-gb: 24
-
-    - name: Install Build Environment
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y --no-install-recommends \
-          bc bison build-essential ccache curl flex g++-multilib gcc-multilib \
-          git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev \
-          lib32z1-dev libelf-dev liblz4-tool libncurses5-dev libsdl1.2-dev \
-          libssl-dev libxml2-utils lzop pngcrush rsync schedtool squashfs-tools \
-          xsltproc zip zlib1g-dev python3 python3-pip clang lld unzip wget tar
-        rm -rf scripts
-        git clone https://gitlab.com/OrangeFox/misc/scripts
-        cd scripts && sudo bash setup/android_build_env.sh
-
-    - name: Sync OrangeFox Manifest
-      if: contains(fromJSON('["11.0", "12.1"]'), inputs.MANIFEST_BRANCH)
-      run: |
-        mkdir -p ~/OrangeFox
-        cd ~/OrangeFox
-        git config --global user.name "${{ github.actor }}"
-        git config --global user.email "${{ github.actor }}+${{ github.actor }}@users.noreply.github.com"
-        git clone https://gitlab.com/OrangeFox/sync.git
-        cd sync
-        ./orangefox_sync.sh --branch ${{ inputs.MANIFEST_BRANCH }} --path ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}
-
-    - name: Clone Device Tree
-      run: |
-        cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}
-        git clone ${{ inputs.DEVICE_TREE }} -b ${{ inputs.DEVICE_TREE_BRANCH }} ${{ inputs.DEVICE_PATH }}
-        cd ${{ inputs.DEVICE_PATH }}
-        printf "DEVICE_TREE_COMMIT=%s" "$(git rev-parse HEAD)" >> $GITHUB_ENV
-
-    - name: 🔥 INJECT ALL 28 FLAGS (NO ECHO)
-      run: |
-        printf "::group::🔥 Injecting ALL 28 OrangeFox Flags"
-        cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}
-        
-        read -r -a ALL_FLAGS <<< '(
-          "FOX_VANILLA_BUILD=0"
-          "OF_DISABLE_MIUI_SPECIFIC_FEATURES=0"
-          "OF_TREBLE_CHECK_ON_REBOOT=1"
-          "FOX_AVB=1"
-          "OF_PATCH_AVB20=1"
-          "OF_USE_MAGISKBOOT=1"
-          "OF_USE_MAGISKBOOT_FOR_ALL_PATCHES=1"
-          "OF_DEFAULT_KEYMASTER_VERSION=4.1"
-          "OF_SUPPORT_GSI_FLASHING=1"
-          "OF_KEEP_GSI_PARTIALLY_DECRYPTED=1"
-          "OF_NO_TREBLE_COMPATIBILITY_CHECK=0"
-          "OF_GSI_MODE=1"
-          "FOX_VARIANT=samsung"
-          "FOX_DYNAMIC_SAMSUNG_FIX=1"
-          "OF_SAMSUNG_SPECIAL=1"
-          "OF_FLASH_BY_FASTBOOT=1"
-          "FOX_SAMSUNG_0x2000_SBL_FLASH=1"
-          "FOX_FORCE_SBL1_FLASH=1"
-          "FOX_USE_NANO_EDITOR=1"
-          "OF_CRYPTPOLICY=1"
-          "OF_FIX_7ZIP_ZIP=1"
-          "OF_USE_GREEN_LED=1"
-          "FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER=1"
-          "OF_QUICK_BACKUP_WIPE=1"
-          "OF_USE_ASH=1"
-          "FOX_REPLACE_BUSYBOX_PS=1"
-          "OF_SUPPORT_MIUI_JMIUI_BOOTMODE=1"
-          "FOX_AB_DEVICE=0"
-        )'
-        
-        cp -n BoardConfig.mk BoardConfig.mk.backup
-        : > flags.sh
-        
-        for flag in "${ALL_FLAGS[@]}"; do
-          printf "export %s" "$flag" >> flags.sh
-          printf "%s" "$flag" >> BoardConfig.mk
-        done
-        
-        printf "✅ %d FLAGS injected!" "${#ALL_FLAGS[@]}"
-        printf "🎯 Features: GSI+AVB+Treble+Samsung+Non-Vanilla"
-        printf "::endgroup::"
-
-    - name: Determine Build Command
-      id: build-cmd
-      run: |
-        if [[ "${{ inputs.MANIFEST_BRANCH }}" == "11.0" || "${{ inputs.MANIFEST_BRANCH }}" == "12.1" ]]; then
-          printf "command=lunch twrp_${{ inputs.DEVICE_NAME }}-eng && make clean && mka adbd ${{ inputs.BUILD_TARGET }}image" >> $GITHUB_OUTPUT
-        else
-          printf "command=lunch omni_${{ inputs.DEVICE_NAME }}-eng && make clean && mka ${{ inputs.BUILD_TARGET }}image" >> $GITHUB_OUTPUT
-        fi
-        printf "BUILD_DATE=%s" "$(date +%Y%m%d-%H%M)" >> $GITHUB_ENV
-
-    - name: Build OrangeFox with ALL Flags
-      run: |
-        cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}
-        export ALLOW_MISSING_DEPENDENCIES=true
-        source ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/flags.sh
-        source build/envsetup.sh
-        printf "::group::Lunch Combos (FULL FLAGS)"
-        lunch | grep -i ${{ inputs.DEVICE_NAME }} || printf "No exact match found"
-        printf "::endgroup::"
-        eval "${{ steps.build-cmd.outputs.command }}"
-
-    - name: Find & Process Recovery Image
-      id: process-image
-      run: |
-        cd ~/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}
-        OUT_DIR="out/target/product/${{ inputs.DEVICE_NAME }}"
-        ORANGEFOX_IMG=$(find "$OUT_DIR" -name "OrangeFox*.img" | head -1)
-        if [[ -n "$ORANGEFOX_IMG" ]]; then
-          printf "CHECK_IMG_IS_OK=true" >> $GITHUB_ENV
-          printf "FILE_PATH=%s" "$(dirname "$ORANGEFOX_IMG")" >> $GITHUB_ENV
-          printf "ORANGEFOX_IMG=%s" "$(basename "$ORANGEFOX_IMG")" >> $GITHUB_ENV
-          printf "MD5_IMG=%s" "$(md5sum "$ORANGEFOX_IMG" | cut -d' ' -f1)" >> $GITHUB_ENV
-        else
-          printf "CHECK_IMG_IS_OK=false" >> $GITHUB_ENV
-          exit 1
-        fi
-
-    - name: Rename Recovery Image
-      if: env.CHECK_IMG_IS_OK == 'true'
-      run: |
-        cd ${{ env.FILE_PATH }}
-        case "${{ inputs.BUILD_TARGET }}" in
-          "boot") mv "${{ env.ORANGEFOX_IMG }}" boot.img; printf "RECOVERY_TYPE=boot" >> $GITHUB_ENV ;;
-          "recovery") mv "${{ env.ORANGEFOX_IMG }}" recovery.img; printf "RECOVERY_TYPE=recovery" >> $GITHUB_ENV ;;
-          "vendorboot") mv "${{ env.ORANGEFOX_IMG }}" vendor_boot.img; printf "RECOVERY_TYPE=vendor_boot" >> $GITHUB_ENV ;;
-        esac
-
-    - name: Add Recovery Installer
-      if: env.CHECK_IMG_IS_OK == 'true' && inputs.RECOVERY_INSTALLER == 'true'
-      run: |
-        cd ${{ env.FILE_PATH }}
-        wget -q https://github.com/kinguser981/recovery-installer/releases/download/11256427880/recovery-installer.zip
-        zip -ur recovery-installer.zip ${{ env.RECOVERY_TYPE }}.img
-
-    - name: Create Samsung TAR
-      if: env.CHECK_IMG_IS_OK == 'true' && inputs.RECOVERY_TAR == 'true'
-      run: |
-        cd ${{ env.FILE_PATH }}
-        tar -cvf ${{ env.RECOVERY_TYPE }}.tar ${{ env.RECOVERY_TYPE }}.img
-
-    - name: Generate Artifact List
-      if: env.CHECK_IMG_IS_OK == 'true'
-      id: artifacts
-      run: |
-        cd ${{ env.FILE_PATH }}
-        mapfile -t FILES < <(
-          printf '%s' "${{ env.RECOVERY_TYPE }}.img"
-          [[ "${{ inputs.RECOVERY_TAR }}" == "true" ]] && printf '%s' "${{ env.RECOVERY_TYPE }}.tar"
-          [[ "${{ inputs.RECOVERY_INSTALLER }}" == "true" ]] && printf '%s' "recovery-installer.zip"
-          find . -name "OrangeFox*.zip" 2>/dev/null || true
-        )
-        printf '%s' "${FILES[@]}" >> $GITHUB_OUTPUT
-
-    - name: Create GitHub Release
-      if: env.CHECK_IMG_IS_OK == 'true'
-      uses: softprops/action-gh-release@v2
-      with:
-        files: ${{ steps.artifacts.outputs.files }}
-        name: OrangeFox [${{ inputs.DEVICE_NAME }}] - ${{ env.BUILD_DATE }}
-        tag_name: ${{ github.run_id }}
-        body: |
-          ## 🏗️ Build Information
-          - **Date:** ${{ env.BUILD_DATE }}
-          - **Branch:** ${{ inputs.MANIFEST_BRANCH }}
-          - **Device:** `${{ inputs.DEVICE_NAME }}`
-          - **Target:** `${{ inputs.BUILD_TARGET }}`
-          
-          ## ✅ 28 FLAGS ENABLED (NO ECHO)
-          - GSI+AVB+Treble+Samsung+Non-Vanilla
-          
-          > ⚠️ Automated build - Test thoroughly!
-        prerelease: false
-        draft: false
-        generate_release_notes: false
-
-    - name: Run LDCheck
-      if: env.CHECK_IMG_IS_OK == 'true'
-      run: |
-        printf "::group::🔍 LDCheck Analysis"
-        mkdir -p tools && cd tools
-        wget -q https://github.com/orao/ldcheck/releases/download/v0.1/ldcheck-linux.zip || true
-        unzip -qo ldcheck-linux.zip 2>/dev/null || true
-        mv -n libneeds* ${{ env.FILE_PATH }}/ 2>/dev/null || true
-        mv -n ldcheck ${{ env.FILE_PATH }}/ 2>/dev/null || true
-        cd ${{ env.FILE_PATH }}
-        python3 ldcheck -p "system/lib64:vendor/lib64:system/lib:vendor/lib" -d ${{ inputs.LDCHECK }}
-        printf "::endgroup::"
-      continue-on-error: true
-
-    - name: Cleanup Workspace
-      if: always()
-      run: |
-        rm -rf ~/OrangeFox scripts
-        df -h
+name: OrangeFox [OFRP]\t\ton:\t\tworkflow_dispatch:\t\t\tinputs:\t\t\t\tMANIFEST_BRANCH:\t\t\t\t\tdescription: 'OrangeFox Branch'\t\t\t\t\trequired: true\t\t\t\t\tdefault: '12.1'\t\t\t\t\ttype: choice\t\t\t\t\toptions: [12.1, 11.0]\t\t\t\tDEVICE_TREE:\t\t\t\t\tdescription: 'Custom Recovery Tree'\t\t\t\t\trequired: true\t\t\t\t\tdefault: ''\t\t\t\tDEVICE_TREE_BRANCH:\t\t\t\t\tdescription: 'Custom Recovery Tree Branch'\t\t\t\t\trequired: true\t\t\t\t\tdefault: ''\t\t\t\tDEVICE_PATH:\t\t\t\t\tdescription: 'Specify your device path.'\t\t\t\t\trequired: true\t\t\t\t\tdefault: 'device/tecno/KJ5'\t\t\t\tDEVICE_NAME:\t\t\t\t\tdescription: 'Specify your Device Codename.'\t\t\t\t\trequired: true\t\t\t\t\tdefault: 'KJ5'\t\t\t\tBUILD_TARGET:\t\t\t\t\tdescription: 'Specify your Build Target'\t\t\t\t\trequired: true\t\t\t\t\tdefault: 'vendorboot'\t\t\t\t\ttype: choice\t\t\t\t\toptions: [boot, recovery, vendorboot]\t\t\t\tLDCHECK:\t\t\t\t\tdescription: 'Path of blobs to check'\t\t\t\t\trequired: true\t\t\t\t\tdefault: 'system/bin/qseecomd'\t\t\t\tRECOVERY_TAR:\t\t\t\t\tdescription: 'Release recovery.tar For Samsung devices'\t\t\t\t\trequired: false\t\t\t\t\tdefault: false\t\t\t\t\ttype: boolean\t\t\t\tRECOVERY_INSTALLER:\t\t\t\t\tdescription: 'Include recovery installer zip'\t\t\t\t\ttype: boolean\t\t\t\t\trequired: true\t\t\t\t\tdefault: true\t\tjobs:\t\tbuild:\t\t\tname: Build OFRP by ${{ github.actor }}\t\t\truns-on: ubuntu-latest\t\t\tif: github.event.repository.owner.id == github.event.sender.id\t\t\tenv:\t\t\t\tGITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}\t\t\tpermissions:\t\t\t\tcontents: write\t\t\tsteps:\t\t\t- uses: actions/checkout@v4\t\t\t- run: echo "::group::User Environment Variables
+Include Recovery Installer: ${{ inputs.RECOVERY_INSTALLER }}
+Release recovery.tar: ${{ inputs.RECOVERY_TAR }}
+::endgroup::"\t\t\t- uses: rokibhasansagar/slimhub_actions@main\t\t\t- uses: pierotofy/set-swap-space@v2\t\t\t\twith:\t\t\t\t\tswap-size-gb: 24\t\t\t- run: sudo apt update && sudo apt -y upgrade && rm -rf scripts && git clone https://gitlab.com/OrangeFox/misc/scripts && cd scripts && sudo bash setup/android_build_env.sh\t\t\t- if: contains(fromJSON('["11.0", "12.1"]'), inputs.MANIFEST_BRANCH)\t\t\t\trun: mkdir -p ${GITHUB_WORKSPACE}/OrangeFox && cd ${GITHUB_WORKSPACE}/OrangeFox && git config --global user.name "${{ github.actor }}" && git config --global user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com" && git clone https://gitlab.com/OrangeFox/sync.git && cd sync && ./orangefox_sync.sh --branch ${{ inputs.MANIFEST_BRANCH }} --path ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}\t\t\t- run: cd ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }} && git clone ${{ inputs.DEVICE_TREE }} -b ${{ inputs.DEVICE_TREE_BRANCH }} ./${{ inputs.DEVICE_PATH }} && cd ${{ inputs.DEVICE_PATH }} && echo "COMMIT_ID=$(git rev-parse HEAD)" >> $GITHUB_ENV\t\t\t\t\t\t# 🔥 FLAG 1: Samsung Variant\t\t\t- run: echo "FOX_VARIANT := samsung" >> ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk\t\t\t\t\t\t# 🔥 FLAG 2: Non-Vanilla Build\t\t\t- run: echo "FOX_VANILLA_BUILD := 0" >> ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk\t\t\t\t\t\t# 🔥 FLAG 3: AB Device Off\t\t\t- run: echo "FOX_AB_DEVICE := 0" >> ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk\t\t\t\t\t\t# 🔥 FLAG 4: AVB2.0 Patch\t\t\t- run: echo "OF_PATCH_AVB20 := 1" >> ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk\t\t\t\t\t\t# 🔥 FLAG 5: GSI Support\t\t\t- run: echo "OF_SUPPORT_GSI_FLASHING := 1" >> ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk\t\t\t\t\t\t# 🔥 FLAG 6: Nano Editor\t\t\t- run: echo "FOX_USE_NANO_EDITOR := 1" >> ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk\t\t\t\t\t\t# 🔥 FLAG 7: CryptPolicy\t\t\t- run: echo "OF_CRYPTPOLICY := 1" >> ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk\t\t\t\t\t\t# 🔥 FLAG 8: 7Zip Fix\t\t\t- run: echo "OF_FIX_7ZIP_ZIP := 1" >> ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk\t\t\t\t\t\t# 🔥 FLAG 9: Green LED\t\t\t- run: echo "OF_USE_GREEN_LED := 1" >> ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk\t\t\t\t\t\t# 🔥 FLAGS SUMMARY\t\t\t- run: echo "::group::✅ 9 FLAGS INJECTED
+$(tail -10 ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk)
+::endgroup::"\t\t\t\t\t\t# 🔥 BUILD COMMAND\t\t\t- id: build-cmd\t\t\t\trun: '[[ "${{ inputs.MANIFEST_BRANCH }}" == "11.0" || "${{ inputs.MANIFEST_BRANCH }}" == "12.1" ]] && echo "command=lunch twrp_${{ inputs.DEVICE_NAME }}-eng && make clean && mka adbd ${{ inputs.BUILD_TARGET }}image" >> $GITHUB_OUTPUT || echo "command=lunch omni_${{ inputs.DEVICE_NAME }}-eng && make clean && mka ${{ inputs.BUILD_TARGET }}image" >> $GITHUB_OUTPUT && echo "BUILD_DATE=$(date +%Y%m%d)" >> $GITHUB_ENV\t\t\t- run: cd ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }} && source build/envsetup.sh && export ALLOW_MISSING_DEPENDENCIES=true && eval "${{ steps.build-cmd.outputs.command }}"\t\t\t- run: 'cd ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }} && ORANGEFOX_IMG=$(find out/target/product/${{ inputs.DEVICE_NAME }} -name "OrangeFox*.img" | head -1) && [[ -n "$ORANGEFOX_IMG" ]] && echo "CHECK_IMG_IS_OK=true" >> $GITHUB_ENV && echo "FILE_PATH=$(dirname "$ORANGEFOX_IMG")" >> $GITHUB_ENV && echo "MD5_IMG=$(md5sum "$ORANGEFOX_IMG" | cut -d" " -f1)" >> $GITHUB_ENV || echo "CHECK_IMG_IS_OK=false" >> $GITHUB_ENV'\t\t\t- if: env.CHECK_IMG_IS_OK == 'true'\t\t\t\trun: 'cd ${{ env.FILE_PATH }} && [[ "${{ inputs.BUILD_TARGET }}" == "boot" ]] && mv OrangeFox*.img boot.img && echo "RECOVERY_TYPE=boot" >> $GITHUB_ENV || [[ "${{ inputs.BUILD_TARGET }}" == "recovery" ]] && mv OrangeFox*.img recovery.img && echo "RECOVERY_TYPE=recovery" >> $GITHUB_ENV || mv OrangeFox*.img vendor_boot.img && echo "RECOVERY_TYPE=vendor_boot" >> $GITHUB_ENV'\t\t\t- if: env.CHECK_IMG_IS_OK == 'true' && inputs.RECOVERY_INSTALLER == 'true'\t\t\t\trun: cd ${{ env.FILE_PATH }} && wget -q https://github.com/kinguser981/recovery-installer/releases/download/11256427880/recovery-installer.zip && zip -ur recovery-installer.zip ${{ env.RECOVERY_TYPE }}.img\t\t\t- if: env.CHECK_IMG_IS_OK == 'true' && inputs.RECOVERY_TAR == 'true'\t\t\t\trun: cd ${{ env.FILE_PATH }} && tar -cvf ${{ env.RECOVERY_TYPE }}.tar ${{ env.RECOVERY_TYPE }}.img\t\t\t- if: env.CHECK_IMG_IS_OK == 'true'\t\t\t\tuses: softprops/action-gh-release@v2\t\t\t\twith:\t\t\t\t\tfiles: |\t\t\t\t\t\t${{ env.FILE_PATH }}/${{ env.RECOVERY_TYPE }}.img\t\t\t\t\t\t${{ env.FILE_PATH }}/${{ env.RECOVERY_TYPE }}.tar\t\t\t\t\t\t${{ env.FILE_PATH }}/recovery-installer.zip\t\t\t\t\t\t${{ env.FILE_PATH }}/OrangeFox*.zip\t\t\t\t\tname: Unofficial OrangeFox [${{ inputs.DEVICE_NAME }}] - ${{ env.BUILD_DATE }}\t\t\t\t\ttag_name: ${{ github.run_id }}\t\t\t\t\tbody: |\t\t\t\t\t\t## 🏗️ Build Information\t\t\t\t\t\t- **Date:** ${{ env.BUILD_DATE }}\t\t\t\t\t\t- **Branch:** ${{ inputs.MANIFEST_BRANCH }}\t\t\t\t\t\t- **Device:** `${{ inputs.DEVICE_NAME }}`\t\t\t\t\t\t- **Target:** `${{ inputs.BUILD_TARGET }}`\t\t\t\t\t\t## ✅ 9 FLAGS ENABLED\t\t\t\t\t\t- FOX_VARIANT := samsung\t\t\t\t\t\t- FOX_VANILLA_BUILD := 0\t\t\t\t\t\t- OF_PATCH_AVB20 := 1\t\t\t\t\t\t- OF_SUPPORT_GSI_FLASHING := 1\t\t\t\t\tprerelease: false\t\t\t\t\tdraft: false\t\t\t- if: env.CHECK_IMG_IS_OK == 'true'\t\t\t\tcontinue-on-error: true\t\t\t\trun: mkdir -p tools && cd tools && wget -q https://github.com/orao/ldcheck/releases/download/v0.1/ldcheck-linux.zip || true && unzip -qo ldcheck-linux.zip 2>/dev/null || true && mv -n libneeds* ${{ env.FILE_PATH }}/ 2>/dev/null || true && mv -n ldcheck ${{ env.FILE_PATH }}/ 2>/dev/null || true && cd ${{ env.FILE_PATH }} && python3 ldcheck -p "system/lib64:vendor/lib64:system/lib:vendor/lib" -d ${{ inputs.LDCHECK }}\t\t\t- if: always()\t\t\t\trun: rm -rf ${GITHUB_WORKSPACE}/OrangeFox scripts && df -h
