--- a/.github/workflows/A.yml
+++ b/.github/workflows/A.yml
@@ -65,8 +65,7 @@ jobs:
     - run: echo "::group::User Environment Variables
 Installer: ${{ inputs.RECOVERY_INSTALLER }}
 TAR: ${{ inputs.RECOVERY_TAR }}
-CRB: ${{ inputs.CRB_PREP }}
-::endgroup::"
+CRB: ${{ inputs.CRB_PREP }}::endgroup::"
     - uses: rokibhasansagar/slimhub_actions@main
     - uses: pierotofy/set-swap-space@v2
       with:
@@ -108,8 +107,7 @@ CRB: ${{ inputs.CRB_PREP }}
 
     # 🔥 FLAGS SUMMARY
     - run: echo "::group::✅ 28 NON-VANILLA FLAGS + CRB PREP
-$(tail -25 ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk)
-::endgroup::"
+$(tail -25 ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk)::endgroup::"
 
     # 🔥 BUILD
     - id: build-cmd
