--- a/.github/workflows/A.yml
+++ b/.github/workflows/A.yml
@@ -110,10 +110,13 @@ jobs:
     - run: echo "OF_SUPPORT_MIUI_JMIUI_BOOTMODE := 1" >> ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk
     - run: echo "FOX_AB_DEVICE := 0" >> ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk
 
-    # 🔥 FLAGS SUMMARY
-    - run: echo "::group::✅ 28 NON-VANILLA FLAGS + CRB PREP
-$(tail -25 ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk)
-::endgroup::"
+  # 🔥 FLAGS SUMMARY - FIXED
+    - run: |
+        echo "::group::28 NON-VANILLA FLAGS + CRB PREP"
+        tail -25 "${GITHUB_WORKSPACE}/OrangeFox/fox_${{ inputs.MANIFEST_BRANCH }}/${{ inputs.DEVICE_PATH }}/BoardConfig.mk"
+        echo "::endgroup::"
+
+
 
     # 🔥 BUILD
     - id: build-cmd
